# aiagent

./: .env.example  .gitignore  App.tsx  CALENDAR_WATCH_SETUP.md  CLAUDE.md  MULTI_TENANT_SETUP.md  QUICK_START_CALENDAR_WATCH.md  README.md  SERVER_INFO.md  SERVER_LOG_REPORT.md  SIP_SETUP.md  VPS_UPGRADE_MESSAGE.md  audioUtils.js  check_customers.py  env.template  index.html  metadata.json  package-lock.json  package.json  server.js  settings.json  setup_calendar_watch.py  types.ts
backend/: .env  .env.example  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  ai_config.py  appointments.py  appointments_agent.py  auth.py  business_hours.py  businesses.py  calendar.py  calendar_webhooks.py  call_logs.py  customers.py  dashboard.py  knowledge_base.py  memory.py  messaging.py  outbound.py  services.py  staff.py
backend/database/: __init__.py  redis_client.py  supabase_client.py
backend/middleware/: __init__.py  auth.py
backend/migrations/: 001_add_business_contact_fields.sql  002_add_social_and_alt_phones.sql
backend/models/: __init__.py  ai_config.py  appointment.py  auth.py  business.py  business_hours.py  call_log.py  customer.py  knowledge_base.py  service.py  staff.py
backend/services/: __init__.py  appointment_service.py  auth_service.py  business_hours_service.py  business_service.py  call_log_service.py  customer_service.py  knowledge_base_service.py  notification_service.py  reminder_service.py  service_service.py  staff_service.py
backend/workers/: __init__.py  analytics_worker.py  outbound_worker.py  (+1 more)
(+152 files in other folders)
